--- a/style.css
+++ b/style.css
@@ -1,28 +1,68 @@
-html *{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-}
-
 body {
-    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('images/pitch.jpg');
- }
-
-h1 {
-    color: white;
-}
-
-.stats {
-    background: linear-gradient(45deg, transparent 0% 40%, rgb(64, 64, 255) 40% 100%);
-}
-
-.team {
-    background-color: rgb(238, 238, 238);
-    line-height: 3.5rem;
-}
-
-/* tbody:before {
-    line-height:1em;
-    content:".";
-    background-color: black;
-    color: transparent;
-    display:block;
-} */
+    font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('images/pitch.jpg');
+    background-color: #19191d;
+    font-weight: 300; }
+  
+  p, h1 {
+    color: #b3b3b3;
+    font-weight: 300; }
+  
+  h1, h2, h3, h4, h5, h6,
+  .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
+  
+  a {
+    -webkit-transition: .3s all ease;
+    -o-transition: .3s all ease;
+    transition: .3s all ease; }
+    a, a:hover {
+      text-decoration: none !important; }
+  
+  .content {
+    padding: 2rem 0; }
+  
+  h2 {
+    font-size: 20px;
+    color: #fff; }
+  
+  .custom-table {
+    min-width: 900px; }
+    .custom-table thead tr, .custom-table thead th {
+      border-top: none;
+      border-bottom: none !important;
+      color: #b3b3b3; }
+    .custom-table tbody th, .custom-table tbody td {
+      color: #b3b3b3;
+      font-weight: 400;
+      padding-bottom: 12px;
+      padding-top: 12px;
+      font-weight: 300; }
+    .custom-table tbody tr:not(.spacer) {
+      border-radius: 7px;
+      overflow: hidden;
+      -webkit-transition: .3s all ease;
+      -o-transition: .3s all ease;
+      transition: .3s all ease; }
+      .custom-table tbody tr:not(.spacer):hover {
+        -webkit-box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.1); }
+    .custom-table tbody tr th, .custom-table tbody tr td {
+      background: #25252b;
+      border: none;
+      -webkit-transition: .3s all ease;
+      -o-transition: .3s all ease;
+      transition: .3s all ease; }
+      .custom-table tbody tr th a, .custom-table tbody tr td a {
+        color: #2e2e36; }
+      .custom-table tbody tr th:first-child, .custom-table tbody tr td:first-child {
+        border-top-left-radius: 0px;
+        border-bottom-left-radius: 0px; }
+      .custom-table tbody tr th:last-child, .custom-table tbody tr td:last-child {
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 0px; }
+    .custom-table tbody tr.spacer td {
+      padding: 0 !important;
+      height: 7px;
+      border-radius: 0 !important;
+      background: transparent !important; }
